[package]
name = "input_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.2.3"
rdev = {version = "0.5.2", features = ["unstable_grab"]}
windows = {version = "0.56.0", features = ["Win32_UI_Input_KeyboardAndMouse"]}
